implement async for file upload and download