@@ -5,11 +5,11 @@ import com.natlex.sections.entity.Section;
 import com.natlex.sections.repository.GeologicalClassRepository;
 import com.natlex.sections.repository.SectionRepository;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,20 +17,25 @@ public class SectionService {
 
     private final SectionRepository sectionRepository;
     private final GeologicalClassRepository geologicalClassRepository;
+    private final ModelMapper modelMapper;
 
     public List<Section> getAllSections() {
         return sectionRepository.findAll();
+
+//        return sections.stream().map((element) -> modelMapper.map(element, SectionDto.class)).toList();
     }
 
     public List<Section> getSectionsByCode(String code) {
         return geologicalClassRepository.findByCode(code).stream()
                 .map(GeologicalClass::getSection)
-                .collect(Collectors.toList());
+                .toList();
+
+//        return sections.stream().map((element) -> modelMapper.map(element, SectionDto.class)).collect(Collectors.toList());
     }
 
     @Transactional
     public void batchInsert(List<Section> sections) {
-        sectionRepository.saveAll(sections);
+       sectionRepository.saveAll(sections);
     }
 
 }
